refactor: aplica melhorias de segurança/performance/qualidade e ajusta API
Segurança e robustez adicionais (relatório de auditoria, itens P1-P3):
- Rate limiting em memória (/auth/google, /auth/discord/sync)
- CORS: origens vêm de env var (CORS_ALLOWED_ORIGINS), não mais hardcoded
- RestExceptionHandler mapeia IllegalArgumentException (400) e
  DataIntegrityViolationException (409) sem vazar detalhes de banco;
  erros genéricos não devolvem mais a mensagem crua da exceção
- RBAC básico: Usuario.getAuthorities() expõe ROLE_<TipoUsuario>
- N+1 mascarado: fetch = LAZY explícito em relações que estavam EAGER
  por padrão (Questao.prova, Alternativa.questao, Prova.instituicao,
  Conteudo.materia, ArtigoStats.artigo); removido cascade invertido em
  ArtigoStats.artigo
- StackOverflowError em toString() de entidades com relação bidirecional
  corrigido (@ToString.Exclude) em Questao/Alternativa, Materia/Conteudo,
  Instituicao/Prova, Artigo/ArtigoImagem/ArtigoStats
- Índices em colunas de FK mais usadas em JOIN (migration V23)
- Corrige numero_questao TEXT->INTEGER (schema divergia da entidade)
- Consolida ValidadorInstituicaoMix + ValidadorInstituicaoPersonalizado
  duplicados em ValidadorInstituicaoExistente
- Remove código morto: WebConfig (nunca registrado pelo Spring),
  System.out.println residuais, CommandLineRunner comentado
- MateriaController para de acessar Repository direto, passa a usar
  MateriaService

Ajustes de API (breaking changes — frontend precisa ser atualizado):
- Endpoints passam a extrair o usuário sempre do JWT, não mais de
  path/query/body: /planner/piores-materias, /usuarios/estatisticas/**,
  /api/revisao/usuarios/**, /flashcards/recomendacao,
  POST /simulados/finalizar (campo id_usuario removido do body)
- Upload de prova aceita alternativas sem texto (conteúdo é imagem, não
  texto) sem lançar NPE; migration V25 permite NULL em
  alternativa.texto_alternativa
- QuestaoDTO, CorrecaoDTO e QuestaoRevisaoDTO passam a retornar
  imagens: string[